# line-openai-chatbot

./: .gitignore  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
src/: line_webhook.py  line_webhook_handler.py  openai_chat.py  usecase.py
src/line/: webhook.py
tests/: flask_webhook_endpoint.py  test_openai.py  test_usecase.py
